# Tokex

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  opencode.json
.github/workflows/: ci.yml  docs-pages.yml  release.yml
.opencode/plugins/: graphify.js
.tokex/skills/: graphify.md  tokex.md
Scripts/: build_graphify.ps1  build_graphify.py  graphify.spec  install.cmd  install.ps1  install.sh  sync-docs.py
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: architecture.md  development.md  downloads.md  installation.md  intro.md  mcp.md  setup.md  usage.md
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
graphify-out/2026-07-02/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
plugins/cotrex-usage/: package.json  tsconfig.json
plugins/cotrex-usage/scripts/: build.mjs
plugins/cotrex-usage/src/: index.tsx
src/: cli.rs  config.rs  graphify.rs  install.rs  install_agent.rs  llm.rs  main.rs  mcp.rs  orchestrate.rs  plan.rs  prompt.rs  script.rs
src/agent/: mod.rs  permission.rs  prompt.rs  tool.rs
src/config/: download.rs  embedded.rs  embedded_graphify.rs  install.rs  install_agent.rs  mod.rs  settings.rs  update.rs
src/core/: intent.rs  mod.rs  normalize.rs  orchestrate.rs
src/dispatch/: cli.rs  dispatch.rs  mod.rs
src/graphify/: graphify.rs  mod.rs
src/llm/: compress.rs  mcp.rs  mod.rs
src/script/: mod.rs  script.rs
src/usage/: mod.rs
