[workspace]
members = [".", "vendor/rtk"]
default-members = [".", "vendor/rtk"]
resolver = "2"

[package]
name = "cotrex"
version = "2.3.0"
edition = "2021"
description = "Agent Execution Middleware: a deterministic RTK orchestration layer that normalizes agent intent and stream output without owning execution."

[[bin]]
name = "cotrex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
inquire = "0.7"
dirs = "5"
toml = "0.8"
markdown-to-ansi = "0.2"
glob = "0.3"
regex = "1"
